// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render component ThirdCycleDepartmentsList within Layout match to snapshot in English 1`] = `
<DocumentFragment>
  <div
    class="row"
  >
    <nav
      aria-label="Sub menu"
      class="col navbar navbar-expand-lg navbar-light"
      id="mainMenu"
    >
      <div
        class="collapse navbar-collapse"
        id="navbarNav"
      >
        <ul
          class="nav"
        >
          <li
            class="parentLink"
          >
            <a
              href="/utbildning/forskarutbildning/?l=en"
            >
              PhD studies
            </a>
          </li>
        </ul>
        <ul
          class="nav nav-list expandable"
        >
          <li
            class="nav-item ancestor"
          >
            <div>
              Courses
            </div>
          </li>
          <li
            class="nav-item leaf selected"
          >
            <a
              class="nav-link"
              href="/utbildning/forskarutbildning/kurser/avdelning?l=en"
            >
              Third-cycle courses by school
            </a>
          </li>
          <li
            class="nav-item leaf"
          >
            <a
              class="nav-link"
              href="/utbildning/forskarutbildning/kurser/sok?l=en"
            >
              Search third-cycle courses
            </a>
          </li>
        </ul>
      </div>
    </nav>
    <div
      class="col"
    >
      <main
        id="mainContent"
      >
        <div
          class="row"
        >
          <div
            class="col"
          >
            <header
              role="presentation"
            >
              <h1>
                Third-cycle courses by school
              </h1>
            </header>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col"
          >
            <article
              class="article paragraphs"
            >
              <h2>
                School
              </h2>
              <ul
                class="link-list"
              >
                <li>
                  <a
                    href="/utbildning/forskarutbildning/kurser/org/BB?l=en"
                  >
                    Department
                  </a>
                </li>
              </ul>
              <h2>
                Older Schools
              </h2>
              <details
                class=""
              >
                <summary
                  aria-label=""
                  class="white"
                >
                  Courses older schools
                </summary>
                <div />
              </details>
            </article>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col"
          >
            <footer
              class="border-top mt-4 pt-1"
              id="articleFooter"
            >
              <address>
                Contact for questions regarding education at KTH: 
                <a
                  href="https://www.kth.se/en/studies/master/general-study-counselling-1.621634"
                >
                  Central study counseling
                </a>
                <br />
                Contact regarding technical matters on this page: 
                <a
                  href="mailto:kopps@kth.se"
                >
                  kopps@kth.se
                </a>
              </address>
            </footer>
          </div>
        </div>
      </main>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render component ThirdCycleDepartmentsList within Layout match to snapshot in Swedish 1`] = `
<DocumentFragment>
  <div
    class="row"
  >
    <nav
      aria-label="Undermeny"
      class="col navbar navbar-expand-lg navbar-light"
      id="mainMenu"
    >
      <div
        class="collapse navbar-collapse"
        id="navbarNav"
      >
        <ul
          class="nav"
        >
          <li
            class="parentLink"
          >
            <a
              href="/utbildning/forskarutbildning/"
            >
              Forskarutbildning
            </a>
          </li>
        </ul>
        <ul
          class="nav nav-list expandable"
        >
          <li
            class="nav-item ancestor"
          >
            <div>
              Kurser
            </div>
          </li>
          <li
            class="nav-item leaf selected"
          >
            <a
              class="nav-link"
              href="/utbildning/forskarutbildning/kurser/avdelning"
            >
              Forskarkurser per skola
            </a>
          </li>
          <li
            class="nav-item leaf"
          >
            <a
              class="nav-link"
              href="/utbildning/forskarutbildning/kurser/sok"
            >
              Sök forskarkurs
            </a>
          </li>
        </ul>
      </div>
    </nav>
    <div
      class="col"
    >
      <main
        id="mainContent"
      >
        <div
          class="row"
        >
          <div
            class="col"
          >
            <header
              role="presentation"
            >
              <h1>
                Forskarkurser per skola
              </h1>
            </header>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col"
          >
            <article
              class="article paragraphs"
            >
              <h2>
                Skola
              </h2>
              <ul
                class="link-list"
              >
                <li>
                  <a
                    href="/utbildning/forskarutbildning/kurser/org/BB"
                  >
                    Avdelning
                  </a>
                </li>
              </ul>
              <h2>
                Äldre skolor
              </h2>
              <details
                class=""
              >
                <summary
                  aria-label=""
                  class="white"
                >
                  Kurser äldre skolor
                </summary>
                <div />
              </details>
            </article>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col"
          >
            <footer
              class="border-top mt-4 pt-1"
              id="articleFooter"
            >
              <address>
                Kontakt för frågor om utbildning på KTH: 
                <a
                  href="https://www.kth.se/utbildning/traffakth/studievagledning"
                >
                  Central studievägledning
                </a>
                <br />
                Teknisk kontakt om denna sida: 
                <a
                  href="mailto:kopps@kth.se"
                >
                  kopps@kth.se
                </a>
              </address>
            </footer>
          </div>
        </div>
      </main>
    </div>
  </div>
</DocumentFragment>
`;
